[UPD] added sidebar and navbar responsive

--- a/form.html
+++ b/form.html
@@ -89,7 +89,7 @@
                 </div>
                 <!-- FINE SIDEBAR -->
                 <div class="col">
-                    <div></div>
+                    <div>Contenuto</div>
                 </div>
             </div>
         </div>
