--- a/form.html
+++ b/form.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Nuovo Prodotto</title>
 </head>
 <body>
     <header>
         <!-- NAVBAR -->
-            <nav class="navbar navbar-expand-lg bg-body-tertiary d-md-none" data-bs-theme="dark">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary d-sm-none" data-bs-theme="dark">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Bootstrap Dashboard</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,10 +33,10 @@
         </header>
     
     <main>
-        <div class="container-fluid">
+        <div class="container-fluid ">
             <div class="row">
                 <!-- SIDEBAR -->
-                <div class="col-sm-4 col-md-3 d-none d-sm-block d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100" style="max-width: 280px;">
+                <div class="col-sm-4 col-md-3 d-none d-sm-block d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100 overflow-hidden" style="max-width: 280px;">
                     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                       <svg class="bi pe-none me-2" width="0" height="32"><use xlink:href="#bootstrap"></use></svg>
                       <span class="fs-4">Bootstrap Dashboard</span>
@@ -88,8 +88,126 @@
                     </div>
                 </div>
                 <!-- FINE SIDEBAR -->
-                <div class="col">
-                    <div>Contenuto</div>
+                <div class="col px-4 overflow-y-scroll vh-100">
+                  <!-- TITOLO -->
+                  <div class="text-center my4">
+                    <h1 class="fw-semibold">Crea nuovo prodotto</h1>
+                    <p class="fs-5">I campi contrassegnati con un (*) sono obbligatori. <br>
+                    Le immagini devono esere in formato PNG e non devono superare i 4 MB di dimensione</p>
+                  </div>
+                  <!-- FINE TITOLO -->
+                  <!-- FORM -->
+                  <div class="row row-cols-xl-2 flex-column flex-xl-row">
+                    <!-- COLONNA DI SINISTRA -->
+                    <div class="col">
+                      <form class="my-4">
+                        <div class="row mb-3">
+                          <label for="inputEmail3" class="col-sm-2 col-form-label">Nome</label>
+                          <div class="col-sm-10">
+                            <input type="email" class="form-control" id="inputEmail3" placeholder="Nome prodotto">
+                          </div>
+                        </div>
+                        <div class="row mb-3">
+                          <label for="inputPassword3" class="col-sm-2 col-form-label">Prezzo</label>
+                          <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputPassword3" placeholder="Prezzo in &euro;">
+                          </div>
+                        </div>
+                        <div class="row mb-3">
+                          <label for="inputPassword3" class="col-sm-2 col-form-label">Marca</label>
+                          <div class="col-sm-10">
+                            <select class="form-select" aria-label="Default select example">
+                              <option selected>Seleziona</option>
+                              <option value="1">Iphone</option>
+                              <option value="2">Samsung</option>
+                              <option value="3">Google</option>
+                            </select>
+                          </div>                        
+                        </div>
+                        <div class="form-floating mb-3">
+                          <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                          <label for="floatingTextarea2">Comments</label>
+                        </div>
+                        <div class="input-group mb-3">
+                          <input type="file" class="form-control" id="inputGroupFile02">
+                          <label class="input-group-text" for="inputGroupFile02">Immagine</label>
+                        </div>
+                        
+                        <div class="mb-3">
+                          <input type="radio" class="btn-check" name="options-base" id="option1" autocomplete="off" checked>
+                          <label class="btn btn-outline-secondary rounded-end-0" for="option1">Disponibile</label>
+                          <input type="radio" class="btn-check" name="options-base" id="option2" autocomplete="off">
+                          <label class="btn btn-outline-secondary rounded-0" for="option2">Esaurito</label>
+                          <input type="radio" class="btn-check" name="options-base" id="option3" autocomplete="off">
+                          <label class="btn btn-outline-secondary rounded-0" for="option3">Fuori Produzione</label>
+                          <input type="radio" class="btn-check" name="options-base" id="option4" autocomplete="off">
+                          <label class="btn btn-outline-secondary rounded-start-0" for="option4">In arrivo</label>
+                        </div>
+                      </form>
+                    </div>
+                    <!-- FINE COL DI SINISTRA -->
+                    <!-- COL DI DESTRA -->
+                    <div class="col">
+                      <ul class="list-group my-4">
+                        <li class="list-group-item px-4">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                              <div class="fw-bold">fotocomaera principale</div>
+                              <div class="">foto di alta qualità e registrare video nitidi</div>
+                            </label>
+                          </div>
+                        </li>
+                        <li class="list-group-item px-4">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                              <div class="fw-bold">schermo OLED</div>
+                              <div class="">offre colori vividi per un'esperienza visiva straordinaria.</div>
+                            </label>
+                          </div>
+                        </li>
+                        <li class="list-group-item">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                              <div class="fw-bold">processore Octa-core</div>
+                              <div class="">prestazioni fluide e veloci per eseguire le applicazioni più esigenti</div>
+                            </label>
+                          </div>
+                        </li>
+                        <li class="list-group-item px-4">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                              <div class="fw-bold">ricarica wireless</div>
+                              <div class="">contente di ricaricare lo smartphone comodamente senza l'uso di cavi</div>
+                            </label>
+                          </div>
+                        </li>
+                        <li class="list-group-item px-4">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                              <div class="fw-bold">connession5 5G</div>
+                              <div class="">navigazione ultra veloce e streaming senza interruzioni</div>
+                            </label>
+                          </div>
+                        </li>
+                        <li class="list-group-item px-4">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                              <div class="fw-bold">tecnologia NFC</div>
+                              <div class="">per effettuare pagamenti senza contatto</div>
+                            </label>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                    <!-- FINE COL DI DESTRA -->
+                  </div>
+                  <button type="submit" class="btn btn-primary mb-4">Sign in</button>
                 </div>
             </div>
         </div>
