--- a/sponsorization.html
+++ b/sponsorization.html
@@ -18,8 +18,8 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" aria-current="page" href="#">Dashboard</a>
-                    <a class="nav-link active" href="sponsorization.html">Sponsorizzazione</a>
-                    <a class="nav-link" href="products.html">Prodotti</a>
+                    <a class="nav-link" href="sponsorization.html">Sponsorizzazione</a>
+                    <a class="nav-link active" href="products.html">Prodotti</a>
                     <a class="nav-link" href="form.html">Nuovo Prodotto</a>
                     <a class="nav-link pb-5" href="#">Clienti</a>
                     <a class="nav-link disabled" aria-disabled="true">Impostazioni</a>
@@ -33,67 +33,128 @@
     </header>
 
     <main>
-        <div class="container-fluid">
-            <div class="row">
-                <!-- SIDEBAR -->
-                <div class="col-sm-4 col-md-3 d-none d-sm-block d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100" style="max-width: 280px;">
-                    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                      <svg class="bi pe-none me-2" width="0" height="32"><use xlink:href="#bootstrap"></use></svg>
-                      <span class="fs-4">Bootstrap Dashboard</span>
-                    </a>
-                    <hr>
-                    <ul class="nav nav-pills flex-column mb-5">
-                      <li class="nav-item">
-                        <a href="#" class="nav-link text-white" aria-current="page">
-                          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
-                          Dashboard
-                        </a>
-                      </li>
-                      <li>
-                        <a href="sponsorization.html" class="nav-link text-white active">
-                          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-                          Sponsorizzazione
-                        </a>
-                      </li>
-                      <li>
-                        <a href="products.html" class="nav-link text-white">
-                          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-                          Prodotti
-                        </a>
-                      </li>
-                      <li>
-                        <a href="form.html" class="nav-link text-white">
-                          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-                          Nuovo Prodotto
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#" class="nav-link text-white">
-                          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-                          Clienti
-                        </a>
-                      </li>
-                    </ul>
-                    <div class="dropdown px-4">
-                      <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-                        <strong>Mario Rossi</strong>
+      <div class="container-fluid ">
+          <div class="row">
+              <!-- SIDEBAR -->
+              <div class="col-sm-4 col-md-3 d-none d-sm-block d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100 overflow-hidden" style="max-width: 280px;">
+                  <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                    <svg class="bi pe-none me-2" width="0" height="32"><use xlink:href="#bootstrap"></use></svg>
+                    <span class="fs-4">Bootstrap Dashboard</span>
+                  </a>
+                  <hr>
+                  <ul class="nav nav-pills flex-column mb-5">
+                    <li class="nav-item">
+                      <a href="#" class="nav-link text-white" aria-current="page">
+                        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
+                        Dashboard
                       </a>
-                      <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                        <li><a class="dropdown-item" href="#">Impostazioni</a></li>
-                        <li><a class="dropdown-item" href="#">Profilo</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Esci</a></li>
-                      </ul>
+                    </li>
+                    <li>
+                      <a href="sponsorization.html" class="nav-link text-white">
+                        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
+                        Sponsorizzazione
+                      </a>
+                    </li>
+                    <li>
+                      <a href="products.html" class="nav-link text-white active">
+                        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+                        Prodotti
+                      </a>
+                    </li>
+                    <li>
+                      <a href="form.html" class="nav-link text-white">
+                        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
+                        Nuovo Prodotto
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="nav-link text-white">
+                        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+                        Clienti
+                      </a>
+                    </li>
+                  </ul>
+                  <div class="dropdown px-4">
+                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                      <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                      <strong>Mario Rossi</strong>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+                      <li><a class="dropdown-item" href="#">Impostazioni</a></li>
+                      <li><a class="dropdown-item" href="#">Profilo</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Esci</a></li>
+                    </ul>
+                  </div>
+              </div>
+              <!-- FINE SIDEBAR -->
+              <div class="col p-5 overflow-y-scroll vh-100">
+                <div class="bg-light">
+                    <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+                        <h1 class="display-5 fw-semibold text-body-emphasis">Trova il piano perfetto per te!</h1>
+                        <p class="fs-5 text-body-secondary">Secgli tra le nostre opzioni di abbonamento e goditi funzionalità esclusive e performance migliori</p>
+                        <div class="fs-5 text-body-secondary fw-semibold mb-3">Porta la tua esperienza al livello successivo</div>
+                        <button type="button" class="btn btn-primary rounded-pill me-3">Primary</button>
+                        <button type="button" class="btn btn-outline-secondary rounded-pill">Secondary</button>
+                  </div>
+                  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center px-3">
+                    <div class="col">
+                      <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                          <h4 class="my-0 fw-normal">Free</h4>
+                        </div>
+                        <div class="card-body">
+                          <h1 class="card-title pricing-card-title">$0<small class="text-body-secondary fw-light">/mo</small></h1>
+                          <ul class="list-unstyled mt-3 mb-4">
+                            <li>10 users included</li>
+                            <li>2 GB of storage</li>
+                            <li>Email support</li>
+                            <li>Help center access</li>
+                          </ul>
+                          <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+                        </div>
+                      </div>
                     </div>
+                    <div class="col">
+                      <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                        <div class="card-header py-3 text-bg-primary border-primary">
+                          <h4 class="my-0 fw-normal">Pro</h4>
+                        </div>
+                        <div class="card-body">
+                          <h1 class="card-title pricing-card-title">$15<small class="text-body-secondary fw-light">/mo</small></h1>
+                          <ul class="list-unstyled mt-3 mb-4">
+                            <li>20 users included</li>
+                            <li>10 GB of storage</li>
+                            <li>Priority email support</li>
+                            <li>Help center access</li>
+                          </ul>
+                          <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3 ">
+                          <h4 class="my-0 fw-normal">Enterprise</h4>
+                        </div>
+                        <div class="card-body">
+                          <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small></h1>
+                          <ul class="list-unstyled mt-3 mb-4">
+                            <li>30 users included</li>
+                            <li>15 GB of storage</li>
+                            <li>Phone and email support</li>
+                            <li>Help center access</li>
+                          </ul>
+                          <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <!-- FINE SIDEBAR -->
-                <div class="col">
-                    <div>Contenuto</div>
-                </div>
-            </div>
-        </div>
-    </main>
+              </div>
+          </div>
+      </div>
+  </main>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
