[UPD] added content to products.html and fix some errors

--- a/sponsorization.html
+++ b/sponsorization.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary d-sm-none" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary d-md-none" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Bootstrap Dashboard</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
       <div class="container-fluid ">
           <div class="row">
               <!-- SIDEBAR -->
-              <div class="col-sm-4 col-md-3 d-none d-sm-block d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100 overflow-hidden" style="max-width: 280px;">
+              <div class="d-none d-md-block col-md-3 d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100 overflow-hidden" style="max-width: 280px;">
                   <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                     <svg class="bi pe-none me-2" width="0" height="32"><use xlink:href="#bootstrap"></use></svg>
                     <span class="fs-4">Bootstrap Dashboard</span>
@@ -94,41 +94,41 @@
                         <h1 class="display-5 fw-semibold text-body-emphasis">Trova il piano perfetto per te!</h1>
                         <p class="fs-5 text-body-secondary">Secgli tra le nostre opzioni di abbonamento e goditi funzionalità esclusive e performance migliori</p>
                         <div class="fs-5 text-body-secondary fw-semibold mb-3">Porta la tua esperienza al livello successivo</div>
-                        <button type="button" class="btn btn-primary rounded-pill me-3">Primary</button>
-                        <button type="button" class="btn btn-outline-secondary rounded-pill">Secondary</button>
+                        <button type="button" class="btn btn-primary rounded-pill me-3">Scopri di pi&ugrave;</button>
+                        <button type="button" class="btn btn-outline-secondary rounded-pill">Contattaci</button>
                   </div>
                   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center px-3">
                     <div class="col">
                       <div class="card mb-4 rounded-3 shadow-sm">
                         <div class="card-header py-3">
-                          <h4 class="my-0 fw-normal">Free</h4>
+                          <h4 class="my-0 fw-normal">Gratis</h4>
                         </div>
                         <div class="card-body">
-                          <h1 class="card-title pricing-card-title">$0<small class="text-body-secondary fw-light">/mo</small></h1>
+                          <h1 class="card-title pricing-card-title">&euro; 0<small class="text-body-secondary fw-light">/mese</small></h1>
                           <ul class="list-unstyled mt-3 mb-4">
-                            <li>10 users included</li>
-                            <li>2 GB of storage</li>
-                            <li>Email support</li>
-                            <li>Help center access</li>
+                            <li>10 utenti</li>
+                            <li>2 GB di spazio</li>
+                            <li>Pubblicit&agrave;</li>
+                            <li>Suopporto email</li>
                           </ul>
-                          <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+                          <button type="button" class="w-100 btn btn-lg btn-outline-primary">Prosegui</button>
                         </div>
                       </div>
                     </div>
                     <div class="col">
                       <div class="card mb-4 rounded-3 shadow-sm border-primary">
                         <div class="card-header py-3 text-bg-primary border-primary">
-                          <h4 class="my-0 fw-normal">Pro</h4>
+                          <h4 class="my-0 fw-normal">Premium</h4>
                         </div>
                         <div class="card-body">
-                          <h1 class="card-title pricing-card-title">$15<small class="text-body-secondary fw-light">/mo</small></h1>
+                          <h1 class="card-title pricing-card-title">&euro; 15<small class="text-body-secondary fw-light">/mese</small></h1>
                           <ul class="list-unstyled mt-3 mb-4">
-                            <li>20 users included</li>
-                            <li>10 GB of storage</li>
-                            <li>Priority email support</li>
-                            <li>Help center access</li>
+                            <li>50 utenti</li>
+                            <li>10 GB di spazio</li>
+                            <li>Senza pubblicit&agrave;</li>
+                            <li>Supporto email prioritario</li>
                           </ul>
-                          <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+                          <button type="button" class="w-100 btn btn-lg btn-primary">Prosegui</button>
                         </div>
                       </div>
                     </div>
@@ -138,14 +138,14 @@
                           <h4 class="my-0 fw-normal">Enterprise</h4>
                         </div>
                         <div class="card-body">
-                          <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small></h1>
+                          <h1 class="card-title pricing-card-title">&euro; 29<small class="text-body-secondary fw-light">/mese</small></h1>
                           <ul class="list-unstyled mt-3 mb-4">
-                            <li>30 users included</li>
-                            <li>15 GB of storage</li>
-                            <li>Phone and email support</li>
-                            <li>Help center access</li>
+                            <li>Utenti illimitati</li>
+                            <li>Spazio illimitato</li>
+                            <li>Senza pubblicit&agrave;</li>
+                            <li>Supporto via email e chat</li>
                           </ul>
-                          <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+                          <button type="button" class="w-100 btn btn-lg btn-primary">Prosequi</button>
                         </div>
                       </div>
                     </div>
