--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <!-- NAVBAR -->
-            <nav class="navbar navbar-expand-lg bg-body-tertiary d-sm-none" data-bs-theme="dark">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary d-md-none" data-bs-theme="dark">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Bootstrap Dashboard</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
         <div class="container-fluid ">
             <div class="row">
                 <!-- SIDEBAR -->
-                <div class="col-sm-4 col-md-3 d-none d-sm-block d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100 overflow-hidden" style="max-width: 280px;">
+                <div class="col-md-3 d-none d-md-block d-flex flex-column flex-shrink-0 p-3 text-bg-dark vh-100 overflow-hidden" style="max-width: 280px;">
                     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                       <svg class="bi pe-none me-2" width="0" height="32"><use xlink:href="#bootstrap"></use></svg>
                       <span class="fs-4">Bootstrap Dashboard</span>
