--- a/sponsorization.html
+++ b/sponsorization.html
@@ -18,8 +18,8 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" aria-current="page" href="#">Dashboard</a>
-                    <a class="nav-link" href="sponsorization.html">Sponsorizzazione</a>
-                    <a class="nav-link active" href="products.html">Prodotti</a>
+                    <a class="nav-link active" href="sponsorization.html">Sponsorizzazione</a>
+                    <a class="nav-link" href="products.html">Prodotti</a>
                     <a class="nav-link" href="form.html">Nuovo Prodotto</a>
                     <a class="nav-link pb-5" href="#">Clienti</a>
                     <a class="nav-link disabled" aria-disabled="true">Impostazioni</a>
@@ -50,13 +50,13 @@
                       </a>
                     </li>
                     <li>
-                      <a href="sponsorization.html" class="nav-link text-white">
+                      <a href="sponsorization.html" class="nav-link text-white active">
                         <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
                         Sponsorizzazione
                       </a>
                     </li>
                     <li>
-                      <a href="products.html" class="nav-link text-white active">
+                      <a href="products.html" class="nav-link text-white ">
                         <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
                         Prodotti
                       </a>
